Update deployment site

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://example.com/"
+baseurl = "https://bwsi-remote-sensing-2020.github.io/remote-sensing-homepage/"
 title = "root@bwsi-remote-sensing"
 theme = "hugo-theme-console"
 languageCode = "en-us"
