--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://bwsi-remote-sensing-2020.github.io/remote-sensing-homepage"
+baseurl = "https://bwsi-remote-sensing-2020.github.io/remote-sensing-homepage/"
 title = "root@bwsi-remote-sensing"
 theme = "hugo-theme-console"
 languageCode = "en-us"
@@ -16,6 +16,6 @@ publishDir = "docs"
   name = "links/"
   url = "links/"
   
-  [[params.navlinks]]
-  name = "photos/"
-  url = "photos/"
+  # [[params.navlinks]]
+  # name = "photos/"
+  # url = "photos/"
