Update to HTTPS

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://bwsi-remote-sensing.net/"
+baseurl = "https://bwsi-remote-sensing.net/"
 title = "root@bwsi-remote-sensing"
 theme = "hugo-theme-console"
 languageCode = "en-us"
